--- a/src/building-blocks/package.json
+++ b/src/building-blocks/package.json
@@ -31,11 +31,15 @@
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
     "@types/uuid": "~8.3.3",
-    "@types/jest": "~27.0.3"
+    "@types/jest": "~27.0.3",
+    "@types/winston": "~2.4.4"
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
     "uuid": "~8.3.2",
-    "jest": "~27.4.5"
+    "jest": "~27.4.5",
+    "winston": "~3.3.3",
+    "awilix": "~6.0.0",
+    "@types/express": "~4.17.13"
   }
 }
