--- a/src/modules/platform-access/package.json
+++ b/src/modules/platform-access/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "@krater/building-blocks",
+  "name": "@krater/platform-access",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint --ext .ts \"src/**/*\"",
     "format": "prettier --write \"src/**/*\""
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick"
-    }
+  "dependencies": {
+    "tsc-alias": "~1.4.2",
+    "jest": "~27.4.5",
+    "@krater/building-blocks": "~1.0.0"
   },
-  "keywords": [],
-  "author": "Mikołaj Wargowski",
-  "license": "ISC",
   "devDependencies": {
     "@types/node": "~16.11.12",
     "typescript": "~4.5.3",
@@ -30,16 +27,9 @@
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
-    "@types/uuid": "~8.3.3",
-    "@types/jest": "~27.0.3",
-    "@types/winston": "~2.4.4",
-    "@types/express": "~4.17.13"
+    "@types/jest": "~27.0.3"
   },
-  "dependencies": {
-    "tsc-alias": "~1.4.2",
-    "uuid": "~8.3.2",
-    "jest": "~27.4.5",
-    "winston": "~3.3.3",
-    "awilix": "~6.0.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
