--- a/src/modules/platform-access/package.json
+++ b/src/modules/platform-access/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint --ext .ts \"src/**/*\"",
-    "format": "prettier --write \"src/**/*\""
+    "format": "prettier --write \"src/**/*\"",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch",
+    "test:ci": "jest --config ./jest.config.js --ci --coverage --runInBand --forceExit"
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
@@ -27,7 +30,8 @@
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
-    "@types/jest": "~27.0.3"
+    "@types/jest": "~27.0.3",
+    "ts-jest": "~27.1.2"
   },
   "keywords": [],
   "author": "",
