--- a/src/building-blocks/package.json
+++ b/src/building-blocks/package.json
@@ -32,14 +32,17 @@
     "eslint-plugin-import": "2.24.0",
     "@types/uuid": "~8.3.3",
     "@types/jest": "~27.0.3",
-    "@types/winston": "~2.4.4",
-    "@types/express": "~4.17.13"
+    "@types/express": "~4.17.13",
+    "@types/jsonwebtoken": "~8.5.6",
+    "@types/dotenv": "~8.2.0"
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
     "uuid": "~8.3.2",
     "jest": "~27.4.5",
     "winston": "~3.3.3",
-    "awilix": "~6.0.0"
+    "awilix": "~6.0.0",
+    "jsonwebtoken": "~8.5.1",
+    "dotenv": "~10.0.0"
   }
 }
