--- a/src/database/package.json
+++ b/src/database/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "@krater/building-blocks",
+  "name": "@krater/database",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint --ext .ts \"src/**/*\"",
-    "format": "prettier --write \"src/**/*\""
+    "format": "prettier --write \"src/**/*\"",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch",
+    "test:ci": "jest --config ./jest.config.js --ci --coverage --runInBand --forceExit",
+    "migration": "knex migrate:latest"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick"
-    }
+  "dependencies": {
+    "tsc-alias": "~1.4.2",
+    "jest": "~27.4.5",
+    "knex": "~0.95.15",
+    "dotenv": "~10.0.0",
+    "ts-node": "~10.4.0",
+    "pg": "~8.7.1"
   },
-  "keywords": [],
-  "author": "Mikołaj Wargowski",
-  "license": "ISC",
   "devDependencies": {
     "@types/node": "~16.11.12",
     "typescript": "~4.5.3",
@@ -30,20 +34,10 @@
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
-    "@types/uuid": "~8.3.3",
     "@types/jest": "~27.0.3",
-    "@types/express": "~4.17.13",
-    "@types/jsonwebtoken": "~8.5.6",
-    "@types/dotenv": "~8.2.0"
+    "ts-jest": "~27.1.2"
   },
-  "dependencies": {
-    "tsc-alias": "~1.4.2",
-    "uuid": "~8.3.2",
-    "jest": "~27.4.5",
-    "winston": "~3.3.3",
-    "awilix": "~6.0.0",
-    "jsonwebtoken": "~8.5.1",
-    "dotenv": "~10.0.0",
-    "@krater/database": "~1.0.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
