--- a/src/modules/platform-access/package.json
+++ b/src/modules/platform-access/package.json
@@ -2,7 +2,7 @@
   "name": "@krater/platform-access",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint --ext .ts \"src/**/*\"",
@@ -15,7 +15,10 @@
     "tsc-alias": "~1.4.2",
     "jest": "~27.4.5",
     "@krater/building-blocks": "~1.0.0",
-    "awilix": "~6.0.0"
+    "awilix": "~6.0.0",
+    "@krater/database": "~1.0.0",
+    "express": "~4.17.2",
+    "celebrate": "~15.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -32,7 +35,8 @@
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
     "@types/jest": "~27.0.3",
-    "ts-jest": "~27.1.2"
+    "ts-jest": "~27.1.2",
+    "@types/express": "~4.17.13"
   },
   "keywords": [],
   "author": "",
