--- a/src/modules/platform-access/package.json
+++ b/src/modules/platform-access/package.json
@@ -18,7 +18,8 @@
     "awilix": "~6.0.0",
     "@krater/database": "~1.0.0",
     "express": "~4.17.2",
-    "celebrate": "~15.0.0"
+    "celebrate": "~15.0.0",
+    "bcrypt": "~5.0.1"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -36,7 +37,8 @@
     "eslint-plugin-import": "2.24.0",
     "@types/jest": "~27.0.3",
     "ts-jest": "~27.1.2",
-    "@types/express": "~4.17.13"
+    "@types/express": "~4.17.13",
+    "@types/bcrypt": "~5.0.0"
   },
   "keywords": [],
   "author": "",
