--- a/src/server/package.json
+++ b/src/server/package.json
@@ -19,7 +19,14 @@
     "awilix": "~6.0.0",
     "@krater/building-blocks": "~1.0.0",
     "@krater/database": "~1.0.0",
-    "@krater/platform-access": "~1.0.0"
+    "@krater/platform-access": "~1.0.0",
+    "swagger-jsdoc": "~6.1.0",
+    "swagger-ui-express": "~4.3.0",
+    "cors": "~2.8.5",
+    "celebrate": "~15.0.0",
+    "express-enforces-ssl": "~1.1.0",
+    "helmet": "~4.6.0",
+    "hpp": "~0.2.3"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -40,7 +47,15 @@
     "@types/express": "~4.17.13",
     "nodemon": "~2.0.15",
     "ts-node": "~10.4.0",
-    "tsconfig-paths": "~3.12.0"
+    "tsconfig-paths": "~3.12.0",
+    "@types/swagger-jsdoc": "~6.0.1",
+    "@types/swagger-ui-express": "~4.1.3",
+    "@types/cors": "~2.8.12",
+    "supertest": "~6.1.6",
+    "@types/supertest": "~2.0.11",
+    "@types/express-enforces-ssl": "~1.1.1",
+    "@types/helmet": "~4.0.0",
+    "@types/hpp": "~0.2.2"
   },
   "keywords": [],
   "author": "",
