--- a/src/building-blocks/package.json
+++ b/src/building-blocks/package.json
@@ -34,7 +34,8 @@
     "@types/jest": "~27.0.3",
     "@types/express": "~4.17.13",
     "@types/jsonwebtoken": "~8.5.6",
-    "@types/dotenv": "~8.2.0"
+    "@types/dotenv": "~8.2.0",
+    "@types/node-schedule": "~1.3.2"
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
@@ -44,6 +45,7 @@
     "awilix": "~6.0.0",
     "jsonwebtoken": "~8.5.1",
     "dotenv": "~10.0.0",
-    "@krater/database": "~1.0.0"
+    "@krater/database": "~1.0.0",
+    "node-schedule": "~2.1.0"
   }
 }
