--- a/src/modules/platform-access/package.json
+++ b/src/modules/platform-access/package.json
@@ -19,8 +19,7 @@
     "@krater/database": "~1.0.0",
     "express": "~4.17.2",
     "celebrate": "~15.0.0",
-    "bcrypt": "~5.0.1",
-    "@krater/notifications": "~1.0.0"
+    "bcrypt": "~5.0.1"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
