--- a/src/server/package.json
+++ b/src/server/package.json
@@ -26,7 +26,8 @@
     "celebrate": "~15.0.0",
     "express-enforces-ssl": "~1.1.0",
     "helmet": "~4.6.0",
-    "hpp": "~0.2.3"
+    "hpp": "~0.2.3",
+    "@krater/notifications": "~1.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
