--- a/src/modules/notifications/package.json
+++ b/src/modules/notifications/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "~6.7.2",
     "@krater/building-blocks": "~1.0.0",
     "@krater/database": "~1.0.0",
-    "awilix": "~6.0.0"
+    "awilix": "~6.0.0",
+    "@krater/integration-events": "~1.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
