✨ Tags module bootstrap

--- a/src/modules/tags/package.json
+++ b/src/modules/tags/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@krater/notifications",
+  "name": "@krater/tags",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && cp -R src/infrastructure/mailer/templates dist/infrastructure/mailer/",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json", 
     "lint": "eslint --ext .ts \"src/**/*\"",
     "format": "prettier --write \"src/**/*\"",
     "test": "jest --config ./jest.config.js",
@@ -13,13 +13,7 @@
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
-    "jest": "~27.4.5",
-    "handlebars": "~4.7.7",
-    "nodemailer": "~6.7.2",
-    "@krater/building-blocks": "~1.0.0",
-    "@krater/database": "~1.0.0",
-    "awilix": "~6.0.0",
-    "@krater/integration-events": "~1.0.0"
+    "jest": "~27.4.5"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -36,8 +30,7 @@
     "eslint-plugin-unicorn": "~39.0.0",
     "eslint-plugin-import": "2.24.0",
     "@types/jest": "~27.0.3",
-    "ts-jest": "~27.1.2",
-    "@types/nodemailer": "~6.4.4"
+    "ts-jest": "~27.1.2"
   },
   "keywords": [],
   "author": "",
