--- a/src/modules/news-feed/package.json
+++ b/src/modules/news-feed/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@krater/tags",
+  "name": "@krater/news-feed",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
