✨ Text Post domain model

--- a/src/modules/news-feed/package.json
+++ b/src/modules/news-feed/package.json
@@ -15,7 +15,9 @@
     "tsc-alias": "~1.4.2",
     "jest": "~27.4.5",
     "@krater/building-blocks": "~1.0.0",
-    "awilix": "~6.0.0"
+    "awilix": "~6.0.0",
+    "@krater/integration-events": "~1.0.0",
+    "@krater/database": "~1.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
