--- a/src/server/package.json
+++ b/src/server/package.json
@@ -29,7 +29,8 @@
     "hpp": "~0.2.3",
     "@krater/notifications": "~1.0.0",
     "@krater/tags": "~1.0.0",
-    "@krater/news-feed": "~1.0.0"
+    "@krater/news-feed": "~1.0.0",
+    "@krater/storage": "~1.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
