--- a/src/modules/file-system/package.json
+++ b/src/modules/file-system/package.json
@@ -1,37 +1,26 @@
 {
-  "name": "@krater/server",
+  "name": "@krater/file-system",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json", 
     "lint": "eslint --ext .ts \"src/**/*\"",
     "format": "prettier --write \"src/**/*\"",
     "test": "jest --config ./jest.config.js",
     "test:watch": "jest --config ./jest.config.js --watch",
-    "test:ci": "jest --config ./jest.config.js --ci --coverage --runInBand --forceExit",
-    "dev": "nodemon"
+    "test:ci": "jest --config ./jest.config.js --ci --coverage --runInBand --forceExit"
   },
   "dependencies": {
     "tsc-alias": "~1.4.2",
     "jest": "~27.4.5",
-    "express": "~4.17.2",
-    "awilix": "~6.0.0",
     "@krater/building-blocks": "~1.0.0",
+    "awilix": "~6.0.0",
+    "@krater/integration-events": "~1.0.0",
     "@krater/database": "~1.0.0",
-    "@krater/platform-access": "~1.0.0",
-    "swagger-jsdoc": "~6.1.0",
-    "swagger-ui-express": "~4.3.0",
-    "cors": "~2.8.5",
+    "express": "~4.17.2",
     "celebrate": "~15.0.0",
-    "express-enforces-ssl": "~1.1.0",
-    "helmet": "~4.6.0",
-    "hpp": "~0.2.3",
-    "@krater/notifications": "~1.0.0",
-    "@krater/tags": "~1.0.0",
-    "@krater/news-feed": "~1.0.0",
-    "@krater/storage": "~1.0.0",
-    "@krater/file-system": "~1.0.0"
+    "@krater/storage": "~1.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -49,17 +38,7 @@
     "eslint-plugin-import": "2.24.0",
     "@types/jest": "~27.0.3",
     "ts-jest": "~27.1.2",
-    "@types/express": "~4.17.13",
-    "nodemon": "~2.0.15",
-    "ts-node": "~10.4.0",
-    "tsconfig-paths": "~3.12.0",
-    "@types/swagger-jsdoc": "~6.0.1",
-    "@types/swagger-ui-express": "~4.1.3",
-    "@types/cors": "~2.8.12",
-    "supertest": "~6.1.6",
-    "@types/supertest": "~2.0.11",
-    "@types/express-enforces-ssl": "~1.1.1",
-    "@types/hpp": "~0.2.2"
+    "@types/express": "~4.17.13"
   },
   "keywords": [],
   "author": "",
