--- a/src/modules/file-system/package.json
+++ b/src/modules/file-system/package.json
@@ -20,7 +20,8 @@
     "@krater/database": "~1.0.0",
     "express": "~4.17.2",
     "celebrate": "~15.0.0",
-    "@krater/storage": "~1.0.0"
+    "@krater/storage": "~1.0.0",
+    "express-fileupload": "~1.2.1"
   },
   "devDependencies": {
     "@types/node": "~16.11.12",
@@ -38,7 +39,8 @@
     "eslint-plugin-import": "2.24.0",
     "@types/jest": "~27.0.3",
     "ts-jest": "~27.1.2",
-    "@types/express": "~4.17.13"
+    "@types/express": "~4.17.13",
+    "@types/express-fileupload": "~1.2.2"
   },
   "keywords": [],
   "author": "",
